Remove sticky footer style. It was causing issues when resized on small devices and I didn't really want a sticky footer.

--- a/wordpress/wp-content/themes/archene/style.css
+++ b/wordpress/wp-content/themes/archene/style.css
@@ -157,8 +157,6 @@ img.aligncenter {
 .global-footer {
 	padding: .5em 1em;
 	background-color: #D8F4EB;
-	margin-bottom: 0;
-	position: absolute;
 	width: 100%;
 }
 
